--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
+    "dev": "rollup -c -w",
     "lint": "eslint . --ext .js --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,12 +15,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "@types/babel__core": "^7.1.12",
+    "@types/react": "^17.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.17.0",
     "eslint-config-ali": "^11.4.1",
@@ -30,7 +36,8 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
-    "rollup": "^1.32.1",
-    "rollup-plugin-uglify": "^6.0.4"
+    "rollup": "^2.30.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "typescript": "^4.1.3"
   }
 }
