--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "lint": "eslint . --ext .js --fix",
+    "lint": "eslint . --ext .js --ext .jsx --ext .ts --ext .tsx --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
     "registry": "https://registry.npm.alibaba-inc.com"
   },
-  "author": "",
+  "author": "wb-lr903313@alibaba-inc.com",
   "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -35,6 +40,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.8",
     "prettier": "^2.2.1",
     "rollup": "^2.30.0",
     "rollup-plugin-uglify": "^6.0.4",
