--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ali/tbdx-react-lazy-render",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -31,6 +31,8 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@types/babel__core": "^7.1.12",
     "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.17.0",
     "eslint-config-ali": "^11.4.1",
