--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "lint": "eslint . --ext .js --ext .jsx --ext .ts --ext .tsx --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -16,8 +15,11 @@
   "license": "ISC",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -43,6 +45,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "rollup": "^2.30.0",
     "rollup-plugin-uglify": "^6.0.4",
