--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "f2elint fix"
     ]
   },
   "devDependencies": {
